--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "convert-excel-to-json": "^1.6.0",
+    "lodash": "^4.17.11"
   }
 }
